@@ -24,7 +24,7 @@ module Shell
       def help
         return <<-EOF
 Get row or cell contents; pass table name, row, and optionally
-a dictionary of column(s), timestamp and versions. Examples:
+a dictionary of column(s), timestamp, timerange and versions. Examples:
 
   hbase> get 't1', 'r1'
   hbase> get 't1', 'r1', {TIMERANGE => [ts1, ts2]}
